--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,19 @@ body{
     background-image: url(../images/bac2.webp);
     background-position: center;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
     
 }
 .container{
     background-color: white;
     min-height: 300px;
-    width: 90%;
+    width: 100%;
     margin: 30px;
     padding: 20px;
+    justify-content: center;
+
 }
 button{
     background-color: black;
