--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 *{
     box-sizing: border-box;
 }
-input{
+#txtPassWord{
     margin-bottom: 10px;
-    width: 40%;
+    min-width: 60% !important;
+    border-radius: 10px;
+    margin-right: 50px !important;
+    
     
 }
 body{
@@ -13,12 +16,17 @@ body{
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    align-items: center !important;
     
+}
+.form{
+    display: flex;
+    justify-content: center !important;
 }
 .container{
     background-color: white;
     min-height: 300px;
-    width: 100%;
+    width: 60%;
     margin: 30px;
     padding: 20px;
     justify-content: center;
